# leave-tracker-application

./: LICENSE  README.md
client/: package-lock.json  package.json
client/ui/: README.md  package-lock.json  package.json
client/ui/src/app/: globals.css  layout.tsx  page.tsx
client/ui/src/components/: Sidebar.tsx  Topbar.tsx
server/auth-gateway/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  swagger.yaml
server/auth-gateway/src/: app.module.ts  main.ts
server/auth-gateway/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
server/auth-gateway/src/config/: configuration.ts
server/auth-gateway/src/database/: database.module.ts
server/auth-gateway/src/holidays/: holidays.controller.spec.ts  holidays.controller.ts  holidays.module.ts
server/auth-gateway/src/shared/: shared.module.ts
server/auth-gateway/src/upload/: upload.controller.spec.ts  upload.controller.ts  upload.module.ts
server/auth-gateway/src/user/: user.controller.spec.ts  user.controller.ts  user.entity.ts  user.interface.ts  user.module.ts  user.service.spec.ts  user.service.ts
server/auth-gateway/src/utils/: common-utils.ts
server/holidays/: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
server/holidays/controllers/: holidays_controller.py
server/holidays/database/: database.py
server/holidays/database/schemas/: holidays_schema.py
server/holidays/tests/integration/: test_main.py
(+27 files in other folders)
